src/objects/Customer_Services_Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>Use_of_appropriate_greeting__c</fullName>
        <inlineHelpText>Used appropriate greeting EG morning/afternoon</inlineHelpText>
        <label>Use of appropriate greeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_positive_professional_language__c</fullName>
        <inlineHelpText>Uses positive, professional language and an appropriate tone throughout. Avoiding
jargon and company-specific terms. correct</inlineHelpText>
        <label>Use of positive, professional language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_verbal_nods__c</fullName>
        <inlineHelpText>Use verbal nods to demonstrate active listening</inlineHelpText>
        <label>Use of verbal nods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_positive_and_professional_language__c</fullName>
        <inlineHelpText>Use positive, polite and professional language throughout the chat</inlineHelpText>
        <label>Use positive and professional language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_the_client_s_name_thoughout_the_chat__c</fullName>
        <inlineHelpText>Use the client&apos;s name throughout the chat</inlineHelpText>
        <label>Use the client&apos;s name thoughout the chat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_the_client_s_name_through_the_cal__c</fullName>
        <inlineHelpText>Use the client’s name throughout the call</inlineHelpText>
        <label>Use the client’s name through the call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_the_client_s_name_throughout__c</fullName>
        <inlineHelpText>Use the client’s name throughout the call</inlineHelpText>
        <label>Use the client’s name throughout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_the_correct_hold_transfer_procedure__c</fullName>
        <inlineHelpText>Use the correct hold and transfer procedure</inlineHelpText>
        <label>Use the correct hold/transfer procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_verbal_nods__c</fullName>
        <inlineHelpText>Use verbal nods to ensure the customer knows you are listening</inlineHelpText>
        <label>Use verbal nods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_appropriate_greeting__c</fullName>
        <inlineHelpText>Used appropriate greeting (company, name, client)</inlineHelpText>
        <label>Used appropriate greeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_correct_hold_transfer_procedur__c</fullName>
        <inlineHelpText>Use the correct hold and transfer procedure</inlineHelpText>
        <label>Used correct hold &amp; transfer procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_communication_noted_in_tasks__c</fullName>
        <inlineHelpText>Was communication noted in tasks?</inlineHelpText>
        <label>Was communication noted in tasks?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_call_compliant__c</fullName>
        <inlineHelpText>Was the call compliant? E.g. Agent avoid offering
financial advise, DPA</inlineHelpText>
        <label>Was the call compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_correspondence_compliant__c</fullName>
        <inlineHelpText>Was the correspondence compliant ?</inlineHelpText>
        <label>Was the correspondence compliant ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_task_actioned_correctly__c</fullName>
        <inlineHelpText>Was the task actioned correctly (pending case prep queue or passed to UW’s)</inlineHelpText>
        <label>Was the task actioned correctly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_full_detailed_notes_left_on_account__c</fullName>
        <inlineHelpText>Were full detailed notes left on customer account?</inlineHelpText>
        <label>Were full detailed notes left on account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_requested_changes_made_accurately__c</fullName>
        <inlineHelpText>Were requested changes made accurately?</inlineHelpText>
        <label>Were requested changes made accurately?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_task_notes_clear_and_accurate__c</fullName>
        <inlineHelpText>Were task notes clear and accurate?</inlineHelpText>
        <label>Were task notes clear and accurate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_appropriate_did_the_agent_tell_th__c</fullName>
        <inlineHelpText>Where appropriate, did the agent tell the complainant about the lessons learnt and changes made to services, guidance or policy.</inlineHelpText>
        <label>Did agent advise lessons learned/changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_further_investigation_was_required__c</fullName>
        <inlineHelpText>Where further investigation was required did agent advise the customer of timescales
to get back to them?</inlineHelpText>
        <label>Did agent advise customer of timescales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_necessary_did_the_agent_recap__c</fullName>
        <inlineHelpText>Where necessary, did the agent recap/reiterate points of customers’ complaint? e.g. I
understand from my colleague that you wish to complain about the rate of return you
are getting on your current investment with us.</inlineHelpText>
        <label>Where necessary, did the agent recap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WrittenPct__c</fullName>
        <description>Written ScoreCard Percentage</description>
        <formula>WrittenScCalcs__c/21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WrittenPct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WrittenScCalcs__c</fullName>
        <description>Written Complaints Scorecard calculations</description>
        <formula>IF(ISPICKVAL(  Did_the_agent_successfully_identify_the__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_use_appropriate_greeti__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Mentioned_your_name__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_agent_answer_complainant_s_questions__c , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_us_eective_questioning_ski__c  , &quot;No&quot;),0,1)+ 
IF(ISPICKVAL(  Did_the_agent_refer_to_any_notes_account__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   Did_the_agent_offer_appropriate_solution__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   did_the_agent_oer_the_cus__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   Did_the_agent_provide_honest_explanation__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(   Did_the_agent_acknowledge_the_mistake__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Where_appropriate_did_the_agent_tell_th__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(    Did_agent_abide_by_the_6_TCF_outcomes__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_agent_give_customer_their_FOS_rights__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Did_the_agent_remain_impartial__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(     Use_of_positive_professional_language__c   , &quot;No&quot;),0,1)+
IF(ISPICKVAL(      Use_correct_grammar_spelling_phrasing__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(      Did_the_agent_close_the_correspondence_a__c    , &quot;No&quot;),0,1)+
IF(ISPICKVAL(      Correct_sign_off_used__c , &quot;No&quot;),0,1)+
IF(ISPICKVAL(       Close_the_call_appropriately__c  , &quot;No&quot;),0,1)+
IF(ISPICKVAL(       Were_full_detailed_notes_left_on_account__c  , &quot;No&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WrittenScCalcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10_Comments__c</fullName>
        <label>10.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X11_Comments__c</fullName>
        <label>11.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12_Comments__c</fullName>
        <label>12.Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Mention_the_company_name__c</fullName>
        <inlineHelpText>2 Mention the company name 1</inlineHelpText>
        <label>2 Mention the company name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>did_the_agent_oer_the_cus__c</fullName>
        <inlineHelpText>If appropriate did the agent offer the customer more than one option to resolve the complaint?</inlineHelpText>
        <label>did the agent offer options to resolve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <label>Customer Services QA Check</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Customer Services ScoreCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Services QA Checks</pluralLabel>
    <recordTypes>
        <fullName>CDev_Outbound_Call_Scorecard</fullName>
        <active>false</active>
        <label>CDev_Outbound_Call_Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>CP_Inbound_Call_Scorecard</fullName>
        <active>true</active>
        <label>CP_Inbound_Call_Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Prep_Case</fullName>
        <active>true</active>
        <label>Case Prep Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Dev_ScoreCard</fullName>
        <active>true</active>
        <label>Client Dev ScoreCard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaints_ScoreCard</fullName>
        <active>true</active>
        <label>Complaints Call ScoreCard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Chat_ScoreCard</fullName>
        <active>true</active>
        <label>Live Chat ScoreCard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Written_Scorecard</fullName>
        <active>true</active>
        <label>Written Scorecard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Case_Number_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Case__c)</errorConditionFormula>
        <errorMessage>You must associate a report with a case</errorMessage>
    </validationRules>
</CustomObject>